@@ -1,5 +1,6 @@
 package Util;
 
+import java.sql.Connection;
 import java.sql.SQLException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -15,75 +16,109 @@ import HR.DataAccess.ShiftDAOImpl;
 import HR.Domain.DriverInfo;
 import HR.Domain.Role;
 import HR.Domain.Shift;
-import HR.Presentation.PresentationUtils;
 import HR.Service.EmployeeService;
 import HR.Service.RoleService;
 import HR.Service.ShiftService;
-import Transportation.DataAccess.*;
-import Transportation.DTO.*;
+import HR.Presentation.PresentationUtils;
+
+// FIXED: Use DTOs from Transportation.DTO, not DataAccess
+import Transportation.DTO.ItemDTO;
+import Transportation.DTO.SiteDTO;
+import Transportation.DTO.TruckDTO;
+import Transportation.DTO.ZoneDTO;
+import Transportation.DataAccess.SqliteItemDAO;
+import Transportation.DataAccess.SqliteSiteDAO;
+import Transportation.DataAccess.SqliteTruckDAO;
+import Transportation.DataAccess.SqliteTransportationTaskDAO;
+import Transportation.DataAccess.SqliteZoneDAO;
 
 public class DatabaseInitializer {
-    public  void loadTransportationFakeData() throws SQLException {
-        SqliteSiteDAO siteDAO = new SqliteSiteDAO();
-        SqliteZoneDAO zoneDAO = new SqliteZoneDAO();
-        SqliteTransportationTaskDAO taskDAO = new SqliteTransportationTaskDAO();
-        SqliteTruckDAO truckDAO = new SqliteTruckDAO();
 
-        // Adding Zones
+    private final RoleService roleService;
+    private final EmployeeService employeeService;
+    private final ShiftService shiftService;
+
+    public DatabaseInitializer(
+            RoleService roleService,
+            EmployeeService employeeService,
+            ShiftService shiftService
+    ) {
+        this.roleService = Objects.requireNonNull(roleService);
+        this.employeeService = Objects.requireNonNull(employeeService);
+        this.shiftService = Objects.requireNonNull(shiftService);
+    }
+
+    /**
+     * Load some fake Transportation data (Zones, Sites, Trucks, etc.).
+     */
+    public void loadTransportationFakeData() throws SQLException {
+        SqliteSiteDAO siteDAO               = new SqliteSiteDAO();
+        SqliteZoneDAO zoneDAO               = new SqliteZoneDAO();
+        SqliteTransportationTaskDAO taskDAO = new SqliteTransportationTaskDAO();
+        SqliteTruckDAO truckDAO             = new SqliteTruckDAO();
+
+        // 1) Adding Zones
         ZoneDTO zone1 = zoneDAO.insert(new ZoneDTO(null, "center", new ArrayList<>()));
         ZoneDTO zone2 = zoneDAO.insert(new ZoneDTO(null, "east", new ArrayList<>()));
         ZoneDTO zone3 = zoneDAO.insert(new ZoneDTO(null, "north", new ArrayList<>()));
 
-        //  Adding Sites for Zone 1 (Center)
-        SiteDTO site1 = siteDAO.insert(new SiteDTO(null, "bareket 20 shoham", "liel", "0501111111", zone1.zoneId()));
-        SiteDTO site2 = siteDAO.insert(new SiteDTO(null, "tel aviv", "alice", "0501234567", zone1.zoneId()));
+        // 2) Adding Sites for each Zone
+        siteDAO.insert(new SiteDTO(null, "bareket 20 shoham", "liel", "0501111111", zone1.zoneId()));
+        siteDAO.insert(new SiteDTO(null, "tel aviv", "alice", "0501234567", zone1.zoneId()));
+        siteDAO.insert(new SiteDTO(null, "yafo 123, jerusalem", "avi", "0509999999", zone2.zoneId()));
+        siteDAO.insert(new SiteDTO(null, "david King Hotel, the dead sea", "nadav", "0508888888", zone2.zoneId()));
+        siteDAO.insert(new SiteDTO(null, "ben gurion university", "shlomi", "0502222222", zone3.zoneId()));
+        siteDAO.insert(new SiteDTO(null, "mini market eilat", "dana", "0507777777", zone3.zoneId()));
 
-        //  Adding Sites for Zone 2 (East)
-        SiteDTO site3 = siteDAO.insert(new SiteDTO(null, "yafo 123, jerusalem", "avi", "0509999999", zone2.zoneId()));
-        SiteDTO site4 = siteDAO.insert(new SiteDTO(null, "david King Hotel, the dead sea", "nadav", "0508888888", zone2.zoneId()));
-
-        //  Adding Sites for Zone 3 (North)
-        SiteDTO site5 = siteDAO.insert(new SiteDTO(null, "ben gurion university", "shlomi", "0502222222", zone3.zoneId()));
-        SiteDTO site6 = siteDAO.insert(new SiteDTO(null, "mini market eilat", "dana", "0507777777", zone3.zoneId()));
-
-        //Adding Trucks
-        TruckDTO truck1 = truckDAO.insert(new TruckDTO(null,"small","123","BMW",100F,120F,true));
-        TruckDTO truck2 = truckDAO.insert(new TruckDTO(null,"large","555","BMW",133F,140F,true));
-
+        // 3) Adding Trucks
+        truckDAO.insert(new TruckDTO(null, "small", "123", "BMW", 100F, 120F, true));
+        truckDAO.insert(new TruckDTO(null, "large", "555", "BMW", 133F, 140F, true));
     }
 
+    /**
+     * Load some example items into the Transportation “items” table.
+     */
     public void loadItems() throws SQLException {
         SqliteItemDAO itemDAO = new SqliteItemDAO();
-        //Adding Items
-        ItemDTO item1 = itemDAO.insert(new ItemDTO(null,"bamba",0.5F));
-        ItemDTO item2 = itemDAO.insert(new ItemDTO(null,"chicken",2F));
-        ItemDTO item3 = itemDAO.insert(new ItemDTO(null,"sugar",1F));
+        itemDAO.insert(new ItemDTO(null, "bamba",   0.5F));
+        itemDAO.insert(new ItemDTO(null, "chicken", 2F));
+        itemDAO.insert(new ItemDTO(null, "sugar",   1F));
     }
 
-    public void InitializeFullHRData() throws ParseException {
-        RoleService roleService  = RoleService.getInstance();
-        EmployeeService employeeService = EmployeeService.getInstance();
-        ShiftService shiftService       = ShiftService.getInstance();
-
+    /**
+     * Load **full** HR data (roles, employees, shift templates, actual shifts).
+     * Converts old java.util.Date for employmentDate into a LocalDate before setting.
+     */
+    public void initializeFullHRData() throws ParseException {
         // 1) Seed roles
-        Arrays.asList("HR", "Shift Manager", "Cashier", "Warehouse", "Cleaner", "Driver", "Transportation Manager")
-                .forEach(roleName -> {
-                    RoleDTO dto = new RoleDTO(roleName);
-                    roleService.addRole(dto);
-                });
+        List<String> rolesToSeed = List.of(
+                "HR",
+                "Shift Manager",
+                "Cashier",
+                "Warehouse",
+                "Cleaner",
+                "Driver",
+                "Transportation Manager"
+        );
+        for (String roleName : rolesToSeed) {
+            roleService.addRole(new RoleDTO(roleName));
+        }
 
-        // 2) Fetch RoleDTOs
-        RoleDTO hrRoleDto                   = roleService.getRoleByName("HR");
-        RoleDTO cashierRoleDto              = roleService.getRoleByName("Cashier");
-        RoleDTO warehouseRoleDto            = roleService.getRoleByName("Warehouse");
-        RoleDTO driverRoleDto               = roleService.getRoleByName("Driver");
-        RoleDTO shiftMgrRoleDto             = roleService.getRoleByName("Shift Manager");
-        RoleDTO transportationManagerRoleDto= roleService.getRoleByName("Transportation Manager");
+        // 2) Fetch RoleDTOs (we will reuse these)
+        RoleDTO hrRoleDto                = roleService.getRoleByName("HR");
+        RoleDTO cashierRoleDto           = roleService.getRoleByName("Cashier");
+        RoleDTO warehouseRoleDto         = roleService.getRoleByName("Warehouse");
+        RoleDTO driverRoleDto            = roleService.getRoleByName("Driver");
+        RoleDTO shiftMgrRoleDto          = roleService.getRoleByName("Shift Manager");
+        RoleDTO transportationMgrRoleDto = roleService.getRoleByName("Transportation Manager");
 
-        // 3) Create hireDate
-        SimpleDateFormat df = new SimpleDateFormat("yyyy-MM-dd");
-        df.setLenient(false);
-        Date hireDate = df.parse("2020-01-01");
+        // 3) Create a LocalDate for hireDate (convert from old java.util.Date)
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+        sdf.setLenient(false);
+        java.util.Date parsedDate = sdf.parse("2020-01-01");
+        LocalDate hireDate = parsedDate.toInstant()
+                .atZone(java.time.ZoneId.systemDefault())
+                .toLocalDate();
 
         //
         // 4a) Non-driver Employee #1 (ID = "1", roles = ["Shift Manager","Cashier","Transportation Manager"])
@@ -91,15 +126,15 @@ public class DatabaseInitializer {
         CreateEmployeeDTO create1 = new CreateEmployeeDTO();
         create1.setId("1");
         create1.setName("Dana");
-        create1.setRoles(Arrays.asList(shiftMgrRoleDto, cashierRoleDto, transportationManagerRoleDto));
+        create1.setRoles(List.of(shiftMgrRoleDto, cashierRoleDto, transportationMgrRoleDto));
         create1.setRawPassword("123");
         create1.setBankAccount("IL123BANK");
         create1.setSalary(5000f);
-        create1.setEmploymentDate(hireDate);
+        create1.setEmploymentDate(hireDate);         // <-- use LocalDate now
         create1.setAvailabilityThisWeek(null);
         create1.setAvailabilityNextWeek(null);
         create1.setHolidays(null);
-        // No "Driver" role here → call the single‐argument overload
+        // No “Driver” role here → use single-arg overload
         employeeService.addEmployee(create1);
 
         //
@@ -108,7 +143,7 @@ public class DatabaseInitializer {
         CreateEmployeeDTO create2 = new CreateEmployeeDTO();
         create2.setId("2");
         create2.setName("John");
-        create2.setRoles(Arrays.asList(warehouseRoleDto, cashierRoleDto));
+        create2.setRoles(List.of(warehouseRoleDto, cashierRoleDto));
         create2.setRawPassword("456");
         create2.setBankAccount("IL456BANK");
         create2.setSalary(4500f);
@@ -116,7 +151,7 @@ public class DatabaseInitializer {
         create2.setAvailabilityThisWeek(null);
         create2.setAvailabilityNextWeek(null);
         create2.setHolidays(null);
-        // Still no "Driver" role → same
+        // Still no “Driver” role
         employeeService.addEmployee(create2);
 
         //
@@ -125,7 +160,7 @@ public class DatabaseInitializer {
         CreateEmployeeDTO createHR = new CreateEmployeeDTO();
         createHR.setId("hr");
         createHR.setName("HR Manager");
-        createHR.setRoles(Collections.singletonList(hrRoleDto));
+        createHR.setRoles(List.of(hrRoleDto));
         createHR.setRawPassword("123");
         createHR.setBankAccount("IL456BANK");
         createHR.setSalary(4500f);
@@ -133,16 +168,15 @@ public class DatabaseInitializer {
         createHR.setAvailabilityThisWeek(null);
         createHR.setAvailabilityNextWeek(null);
         createHR.setHolidays(null);
-        // No "Driver" here either
         employeeService.addEmployee(createHR);
 
         //
-        // 4d) Driver‐only Employee #4 (ID = "driver1", roles = ["Driver"])
+        // 4d) Driver-only Employee #4 (ID = "driver1", roles = ["Driver"])
         //
         CreateEmployeeDTO createDriver1 = new CreateEmployeeDTO();
         createDriver1.setId("driver1");
         createDriver1.setName("Alex Driver");
-        createDriver1.setRoles(Collections.singletonList(driverRoleDto)); // “Driver” role present
+        createDriver1.setRoles(List.of(driverRoleDto)); // has “Driver”
         createDriver1.setRawPassword("driverpass");
         createDriver1.setBankAccount("IL789BANK");
         createDriver1.setSalary(4700f);
@@ -151,7 +185,7 @@ public class DatabaseInitializer {
         createDriver1.setAvailabilityNextWeek(null);
         createDriver1.setHolidays(null);
 
-        // Because “Driver” is in createDriver1.getRoles(), we call addEmployee(dto, licenses) exactly once:
+        // Because “Driver” appears in roles, call the two-arg overload once:
         List<DriverInfo.LicenseType> licenses1 = List.of(DriverInfo.LicenseType.B);
         employeeService.addEmployee(createDriver1, licenses1);
 
@@ -161,7 +195,7 @@ public class DatabaseInitializer {
         CreateEmployeeDTO createDriver2 = new CreateEmployeeDTO();
         createDriver2.setId("driver2");
         createDriver2.setName("Sam Wheels");
-        createDriver2.setRoles(Arrays.asList(driverRoleDto, warehouseRoleDto)); // “Driver” present
+        createDriver2.setRoles(List.of(driverRoleDto, warehouseRoleDto)); // has “Driver”
         createDriver2.setRawPassword("truckit");
         createDriver2.setBankAccount("IL998BANK");
         createDriver2.setSalary(4900f);
@@ -170,15 +204,15 @@ public class DatabaseInitializer {
         createDriver2.setAvailabilityNextWeek(null);
         createDriver2.setHolidays(null);
 
-        // Because “Driver” is in createDriver2.getRoles(), we call the two‐argument overload exactly once:
-        List<DriverInfo.LicenseType> licenses2 = Arrays.asList(
+        // Because “Driver” appears in roles, call the two-arg overload once:
+        List<DriverInfo.LicenseType> licenses2 = List.of(
                 DriverInfo.LicenseType.C,
                 DriverInfo.LicenseType.C1
         );
         employeeService.addEmployee(createDriver2, licenses2);
 
         //
-        // 5) Define recurring‐shift templates
+        // 5) Define recurring shift templates (all days of week × Morning/Evening)
         //
         for (DayOfWeek dow : DayOfWeek.values()) {
             ShiftTemplateDTO morningTpl = new ShiftTemplateDTO();
@@ -195,9 +229,10 @@ public class DatabaseInitializer {
         }
 
         //
-        // 6) Create one actual Morning & one Evening shift for each of the next 7 days
+        // 6) Create one actual Morning and one Evening shift for each of the next 7 days
+        //    (Using ShiftDAO since ShiftService has no “addShift”)
         //
-        var conn     = Database.getConnection();
+        Connection conn = Database.getConnection();
         ShiftDAO shiftDAO = new ShiftDAOImpl(conn);
 
         LocalDate today = LocalDate.now();
@@ -206,8 +241,8 @@ public class DatabaseInitializer {
             java.sql.Date sqlDate = java.sql.Date.valueOf(dateLocal);
 
             // Morning shift
-            String morningId = dateLocal.toString() + "-Morning";
-            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesM   = new HashMap<>();
+            String morningId = dateLocal + "-Morning";
+            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesM = new HashMap<>();
             Map<Role, Integer> requiredCountsM = new HashMap<>();
             Shift morningShift = new Shift(
                     morningId,
@@ -219,8 +254,8 @@ public class DatabaseInitializer {
             shiftDAO.insert(morningShift);
 
             // Evening shift
-            String eveningId = dateLocal.toString() + "-Evening";
-            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesE   = new HashMap<>();
+            String eveningId = dateLocal + "-Evening";
+            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesE = new HashMap<>();
             Map<Role, Integer> requiredCountsE = new HashMap<>();
             Shift eveningShift = new Shift(
                     eveningId,
@@ -238,15 +273,15 @@ public class DatabaseInitializer {
         );
     }
 
-
-
-    public void InitializePartHRData(){
-        RoleService roleService  = RoleService.getInstance();
-        EmployeeService employeeService = EmployeeService.getInstance();
-        ShiftService shiftService       = ShiftService.getInstance();
-        // Minimal “zero” seed: only add HR role, then prompt for initial HR user
+    /**
+     * Load minimal ("Part HR") data: only HR role, plus shift templates and actual shifts,
+     * and prompt for a single initial HR user.
+     */
+    public void initializePartHRData() {
+        // 1) Add only the “HR” role
         roleService.addRole(new RoleDTO("HR"));
 
+        // 2) Create shift templates for every day × Morning/Evening
         for (DayOfWeek dow : DayOfWeek.values()) {
             ShiftTemplateDTO morningTpl = new ShiftTemplateDTO();
             morningTpl.setDay(dow);
@@ -260,9 +295,9 @@ public class DatabaseInitializer {
             eveningTpl.setDefaultCounts(Collections.emptyMap());
             shiftService.addTemplate(eveningTpl);
         }
-        // 6) Create one actual Morning and one Evening shift for each of the next 7 days
-        //    (We bypass ShiftService since it has no add‐shift method; use ShiftDAO directly.)
-        var conn     = Database.getConnection();
+
+        // 3) Create one actual Morning and one Evening shift for the next 7 days
+        Connection conn = Database.getConnection();
         ShiftDAO shiftDAO = new ShiftDAOImpl(conn);
 
         LocalDate today = LocalDate.now();
@@ -271,8 +306,8 @@ public class DatabaseInitializer {
             java.sql.Date sqlDate = java.sql.Date.valueOf(dateLocal);
 
             // Morning shift
-            String morningId = dateLocal.toString() + "-Morning";
-            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesM   = new HashMap<>();
+            String morningId = dateLocal + "-Morning";
+            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesM = new HashMap<>();
             Map<Role, Integer> requiredCountsM = new HashMap<>();
             Shift morningShift = new Shift(
                     morningId,
@@ -284,8 +319,8 @@ public class DatabaseInitializer {
             shiftDAO.insert(morningShift);
 
             // Evening shift
-            String eveningId = dateLocal.toString() + "-Evening";
-            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesE   = new HashMap<>();
+            String eveningId = dateLocal + "-Evening";
+            Map<Role, ArrayList<HR.Domain.Employee>> requiredRolesE = new HashMap<>();
             Map<Role, Integer> requiredCountsE = new HashMap<>();
             Shift eveningShift = new Shift(
                     eveningId,
@@ -297,11 +332,13 @@ public class DatabaseInitializer {
             shiftDAO.insert(eveningShift);
         }
 
+        // 4) Prompt the console user for exactly one initial HR user
         Scanner scanner = new Scanner(System.in);
         String newId, newName, newPw, newBankAccount;
         Float newSalary;
-        Date newEmpDate;
+        LocalDate newEmpDate;
 
+        // Prompt for ID
         while (true) {
             PresentationUtils.typewriterPrint("Enter ID for initial HR user: ", 20);
             newId = scanner.nextLine().trim();
@@ -309,6 +346,8 @@ public class DatabaseInitializer {
                 PresentationUtils.typewriterPrint("ID cannot be empty. Try again.", 20);
             } else break;
         }
+
+        // Prompt for name
         while (true) {
             PresentationUtils.typewriterPrint("Enter name for initial HR user: ", 20);
             newName = scanner.nextLine().trim();
@@ -316,6 +355,8 @@ public class DatabaseInitializer {
                 PresentationUtils.typewriterPrint("Name cannot be empty. Try again.", 20);
             } else break;
         }
+
+        // Prompt for password
         while (true) {
             PresentationUtils.typewriterPrint("Enter password for initial HR user: ", 20);
             newPw = scanner.nextLine().trim();
@@ -323,6 +364,8 @@ public class DatabaseInitializer {
                 PresentationUtils.typewriterPrint("Password cannot be empty. Try again.", 20);
             } else break;
         }
+
+        // Prompt for bank account
         while (true) {
             PresentationUtils.typewriterPrint("Enter bank account for initial HR user: ", 20);
             newBankAccount = scanner.nextLine().trim();
@@ -330,6 +373,8 @@ public class DatabaseInitializer {
                 PresentationUtils.typewriterPrint("Bank account cannot be empty. Try again.", 20);
             } else break;
         }
+
+        // Prompt for salary
         while (true) {
             PresentationUtils.typewriterPrint("Enter salary for initial HR user: ", 20);
             String salaryLine = scanner.nextLine().trim();
@@ -342,13 +387,18 @@ public class DatabaseInitializer {
                 PresentationUtils.typewriterPrint("Invalid number. Please enter a valid salary.", 20);
             }
         }
-        SimpleDateFormat df_ = new SimpleDateFormat("yyyy-MM-dd");
-        df_.setLenient(false);
+
+        // Prompt for employment date (convert from String → LocalDate)
+        SimpleDateFormat df = new SimpleDateFormat("yyyy-MM-dd");
+        df.setLenient(false);
         while (true) {
             PresentationUtils.typewriterPrint("Enter employment date (YYYY-MM-DD): ", 20);
             String dateLine = scanner.nextLine().trim();
             try {
-                newEmpDate = df_.parse(dateLine);
+                java.util.Date parsed = df.parse(dateLine);
+                newEmpDate = parsed.toInstant()
+                        .atZone(java.time.ZoneId.systemDefault())
+                        .toLocalDate();
                 break;
             } catch (ParseException e) {
                 PresentationUtils.typewriterPrint("Invalid date format. Use YYYY-MM-DD. Try again.", 20);
@@ -359,7 +409,7 @@ public class DatabaseInitializer {
         CreateEmployeeDTO createHr0 = new CreateEmployeeDTO();
         createHr0.setId(newId);
         createHr0.setName(newName);
-        createHr0.setRoles(Collections.singletonList(roleService.getRoleByName("HR")));
+        createHr0.setRoles(List.of(roleService.getRoleByName("HR")));
         createHr0.setRawPassword(newPw);
         createHr0.setBankAccount(newBankAccount);
         createHr0.setSalary(newSalary);
@@ -369,7 +419,6 @@ public class DatabaseInitializer {
         createHr0.setHolidays(null);
 
         employeeService.addEmployee(createHr0);
-
         PresentationUtils.typewriterPrint("Initial HR user created.", 20);
     }
 }
